apply plugin: 'com.android.application'

android {
    compileSdkVersion 30
    buildToolsVersion '29.0.2'

    defaultConfig {
        applicationId "inc.flide.vi8"
        minSdkVersion 21
        targetSdkVersion 30
        versionCode 5
        versionName "iteration-5"
    }
    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    lintOptions {
        htmlReport true
        htmlOutput file("lint-report.html")
        warningsAsErrors false
        abortOnError false
        disable "UnsafeExperimentalUsageError",
            "UnsafeExperimentalUsageWarning"
    }
}


dependencies {
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation 'com.google.android.material:material:1.2.1'
    implementation 'com.astuetz:pagerslidingtabstrip:1.0.1'
    implementation 'com.orhanobut:logger:2.2.0'
    api 'com.afollestad.material-dialogs:core:0.9.2.3'
}
